# pearls

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs  mcp.rs
src/db/: conn.rs  migration.rs  mod.rs  tasks.rs
tests/: cli.rs
