[package]
name = "pearls"
version = "0.1.0-alpha.4"
edition = "2024"
description = "A lightweight CLI for managing long-running task graphs for coding agents."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/jacobcalvert/pearls"
homepage = "https://github.com/jacobcalvert/pearls"
keywords = ["cli", "agent", "task-management", "llm", "workflow"]
categories = ["command-line-utilities", "database"]

[dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
eyre = "0.6.12"
sea-orm-migration = { version = "1.1.10", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
sea-query = { version = "0.32.0", features = ["backend-sqlite"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
filelock = "0.4.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.139"

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.10.1"
